Plugin Name: CoursePress Pro
Author: Marko Miljus ( Incsub ) / Rheinard Korf ( Incsub )

CHANGE LOG
=================================================

== Changelog ==

= 1.2.5.4 =
* Fixed issue with margin order as paid with Manual Payments
* Added additional hooks for developers
* Integration with WooCommerce

= 1.2.5.3 =
* Security Update: Fixed possible WordPress XSS bug
* Fixed clearfix div
* Fixed broken virtual pages

= 1.2.5.2 =
* Fix missing class error for CoursePress Standard (free).

= 1.2.5.1 =
* Added basic certificate functionality to CoursePress Pro (templates planned for future release).
* Added additional capabilities for instructors
* Added formatting to the instructor single page
* Changed default 'subscriber' role for students to be actual default WordPress role set
* Fixed issue with enrolling a student to a paid course (paid via PayPal chained payments)
* Fixed issue with mandatory, assessable and limit attempts options (if once checked then unchecked)
* Fixed issue with uncompleted course even if unit elements (answer fields) were completed
* Fixed issue: Course Pre-Requisite still showing after required course completed
* Fixed theme translation issues
* Fixed issue with instructor profile pages when instructor username contains space
* Fixed issue with Course Structure links when course starts in the future
* Fixed "unit_page_title_tag_class" shortcode attribute to output valid HTML class
* Fixed issues with courses bulk actions
* Fixed issue with previewing a unit (when user needs to pass all mandatory assessments option is checked)
* Fixed issue with Order Complete Page MarketPress message
* Fixed issue with displaying 1970 date on the course calendar when clicking on the previous link
* Fixed issue with course order when Post Order Number is selected as an course order option
* Fixed issue with login and signup popup links
* Fixed issue with admin discussions pagination