@@ -8,8 +8,9 @@ CHANGE LOG
 
 = 1.2.5.4 =
 * Fixed issue with margin order as paid with Manual Payments
+* Fixed issue with Virtual pages
 * Added additional hooks for developers
-* Integration with WooCommerce
+* Integration with WooCommerce (CoursePress > Settings > WooCommerce Integration)
 
 = 1.2.5.3 =
 * Security Update: Fixed possible WordPress XSS bug
